UPDATE & DELETE CUSTOMERS COMPLETED

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
         <div ui-view="v3"></div>
     </div>
     
-    <!-- <div id="snackbar">{{errorMsg}}</div> -->
-    
+    <div id="snackbar">{{errorMsg}}</div>
+
 <!--     <footer class="footer">
       <div class="container">
        <p class="text-muted">MADE WITH <img src="./assets/imgs/shape 1.png"> AT QBURST</p>
@@ -48,6 +48,7 @@
     <script src="./assets/js/angularCode/sideNavModule.js"></script>
     <script src="./assets/js/angularCode/customers/new.js"></script>
     <script src="./assets/js/angularCode/customers/view.js"></script>
+    <script src="./assets/js/angularCode/customers/update.js"></script>
     <script src="./assets/js/angularCode/stocks/new.js"></script>
     <script src="./assets/js/angularCode/stocks/update.js"></script>
     <script src="./assets/js/angularCode/stocks/view.js"></script>
