INTEGRATING TOAST INTO index.html

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">    
-<body>
+<body ng-controller="indexCtrl">
     
     <div ng-class="{'container-fluid':loggedIn , 'container':!loggedIn }">
         <div ui-view="v1"></div>
