LOADING AND fadeRIGHT FX ADDED

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,16 @@
         <div ui-view="v3"></div>
     </div>
     
-    <div id="snackbar">{{errorMsg}}</div>
+    <div id="snackbar">
+    {{errorMsg}}
+    <center>
+        <div class="progress" style="height:2px;width: 400px;">
+            <div class="indeterminate" style="background-color :#c62828"></div>
+        </div>
+    </center>
+    </div>
+
+
 
 <!--     <footer class="footer">
       <div class="container">
