--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
     <script src = "./assets/js/angularCode/stocks/update.js"></script>
     <script src = "./assets/js/angularCode/stocks/view.js"></script>
     <script src = "./assets/js/angularCode/orders/new.js"></script>
+    <script src = "./assets/js/angularCode/billing/new.js"></script>
         
 </body>
     
