VIEW & PAY BILLS COMPLETED

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <head>
         <base href="/">
         <title>PC DECORATIONS</title>
+        <link rel="icon" href="./assets/imgs/PC.jpg">
     </head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -62,7 +63,9 @@
     <script src = "./assets/js/angularCode/stocks/update.js"></script>
     <script src = "./assets/js/angularCode/stocks/view.js"></script>
     <script src = "./assets/js/angularCode/orders/new.js"></script>
+    <script src = "./assets/js/angularCode/orders/view.js"></script>
     <script src = "./assets/js/angularCode/billing/new.js"></script>
+    <script src = "./assets/js/angularCode/billing/view.js"></script>
         
 </body>
     
