--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,18 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/animate.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/styles.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">    
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">    
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">    
+    <link rel="stylesheet" type="text/css" href="./assets/fonts/matIcons/MatIcons.css">
+    <link rel="stylesheet" type="text/css" href="./assets/fonts/montessarat/montessarat.css">
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">     -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">     -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Artifika" rel="stylesheet">     -->
+    <link rel="stylesheet" type="text/css" href="./assets/fonts/Dancing/Dancing.css">    
+    <link rel="stylesheet" type="text/css" href="./assets/fonts/Raleway/Raleway.css">    
+    <link rel="stylesheet" type="text/css" href="./assets/fonts/Roboto/Roboto.css">    
+    <link rel="stylesheet" type="text/css" href="./assets/fonts/Artifika/Artifika.css">    
 <body ng-controller="indexCtrl">
     
     <div ng-class="{'container-fluid':loggedIn , 'container':!loggedIn }">
