STOCK REPORT 90perc

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
        <p class="text-muted">MADE WITH <img src="./assets/imgs/shape 1.png"> AT QBURST</p>
       </div>
     </footer> -->    
+    <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
     <script src = "./assets/js/jquery.js"></script>
     <script src = "./assets/js/angular.js"></script>
     <script src = "./assets/js/ng-pickadate.js"></script>
@@ -71,7 +72,7 @@
     <script src = "./assets/js/angularCode/billing/new.js"></script>
     <script src = "./assets/js/angularCode/billing/view.js"></script>
     <script src = "./assets/js/angularCode/reports/view.js"></script>
-        
+    <script>if (window.module) module = window.module;</script>
 </body>
     
 </html>
