BILL Display Done and Bugs Fixed

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
     
     <div ng-class="{'container-fluid':loggedIn , 'container':!loggedIn }">
         <div id="vw1" ui-view="v1"></div>
-        <!-- <div id="vw2" ui-view="v2" style="margin-left: 250px"></div> -->
-        <div id="vw2" ui-view="v2" ng-class="{'c1':$rootScope.sideNavDisplayFinal , 'c2':!($rootScope.sideNavDisplayFinal) }"></div>
+        <div id="vw2" ui-view="v2" style="margin-left: 250px"></div>
+        <!-- <div id="vw2" ui-view="v2" ng-class="{'c1':$rootScope.sideNavDisplayFinal , 'c2':!($rootScope.sideNavDisplayFinal) }"></div> -->
     </div>
     
     <div id="snackbar">
