Finalized Everything Final Testing Left Removed New Bill Option Removed Hardcoding of Host and Port SideNav Expansion And Shrink Done Moved All jsReport template ids to Config module

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
 	
 	<div ng-class="{'container-fluid':loggedIn , 'container':!loggedIn }">
 		<div ui-view="v1"></div>
-		<div ui-view="v2" style="margin-left: 250px"></div>
+		<div id="view2" ui-view="v2" ng-class="{'c1' : showSideNavFinal , 'c2' : !showSideNavFinal }"></div>
+		<!-- <div ui-view="v2" style="margin-left: 250px"></div> -->
 	</div>
 	
 	<div id="snackbar">
